feat: add user metadata endpoint
